--- a/index.css
+++ b/index.css
@@ -1,92 +1,161 @@
-<?php 
-session_start();
-
-if(!isset($_SESSION["login"]) ) {
-    header("Location: login.php");
-    exit;
-
-}
-require 'functions.php';
-$datas = query("SELECT * FROM datas");
-
-if( isset($_POST["search"]) ) {
-    $datas = search($_POST["keyword"]);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
+body {
+    min-height: 100vh;
+    width: 100%;
+    background: url(data.svg);
+    background-repeat:repeat-y;
+    background-size: contain;
+    background-position: right;
+}
 
-// $db = mysqli_connect("localhost", "root", "", "basicphp");
+header {
+    background: url(gelombang.svg);
+    background-repeat: repeat;
+    background-size: contain;
+    color: #eaeaea;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    display: flex;
+    gap: 10px;
+    height: 100px;
+    animation: rotate 6s infinite alternate linear;
+}
 
-// $result = mysqli_query($db, "SELECT * FROM datas");
+h2 {
+    text-align: center;
+    margin-top: 10px;
+}
 
-// ambil data (fetch) mahasiswa dari object result
-// mysqli_fetch_row() mengembalikan array numerik
-// mysqli_fetch_assoc() mengembalikan array associative/namanya
-// mysqli_fetch_array() mengembalikan array keduanya
-// mysqli_fetch_object() 
+.logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+}
 
-// while($data = mysqli_fetch_assoc($result)) {
-// var_dump($data);
-// }
-?>
+.logo a {
+    padding: 20px;
+    background-color: #216ce7;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+}
 
+.logo-img {
+    width: 60px;
+    height: 60px;
+}
 
+.contain {
+    margin-top: 3vh;
+}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="s.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script&family=Lobster&family=Montserrat:ital,wght@1,100&family=Open+Sans:wght@300&family=Philosopher&display=swap" rel="stylesheet">
-    <title>Halaman Users</title>
-</head>
-<body>
+.search {
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+}
+
+.search input {
+    padding: 10px;
+    border: 2px solid rgb(3, 3, 3);
+    font-size: 12px;
+}
+.search input[type=text] {
+    width: 230px;
+}
+
+.search button {
+    border-radius: 10px;
+    padding: 10px;
+    border: .5px solid white;
+    color: white;
+    background-color: rgb(60, 129, 219);
+    cursor: pointer;
+}
+
+.tambah {
+    text-align: center;
+    padding: 40px;
+}
+
+.tambah a {
+    background-color: rgb(1, 158, 185);
+    padding: 14px;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+}
+.container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card {
+    background-color: rgb(238, 240, 241);
+    width: 300px;
+    margin: 10px;
+    border-radius: 15px;
+    box-shadow: 2px 9px 37px 1px rgba(0,0,0,0.48);
+-webkit-box-shadow: 2px 9px 37px 1px rgba(0,0,0,0.48);
+-moz-box-shadow: 2px 9px 37px 1px rgba(0,0,0,0.48);
+}
+
+.card-image {
     
-    <header>
-        <div class="logo">
-            <img src="logo.png" alt="" class="logo-img">
-            <a href="logout.php">Logout</a>
-        </div>
-    </header>
+    display: flex;
     
-    <h2>Data Santri MAWI Kebarongan</h2>
-   
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 20px;
+    height: auto;
+    margin-bottom: 15px;
+    border-radius: 15px 15px 0 0;
+}
+.card-image img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 200px;
+    object-fit: cover;
+}
 
-    <div class="contain">
-    <form action="" method="post">
-        <div class="search">
-            <input type="text" name="keyword" placeholder="Masukan data yang ingin dicari" autocomplete="off" size="40">
-            <button type="submit" name="search">Search</button>
-        </div>
-        <div class="tambah">
-            <a href="insert.php">Tambah Data Santri</a>
-        </div>
-    </form>
-    </div>
-    <!-- end header -->
-    
+.card h4 {
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-   
-        
-        
-        <?php  foreach($datas as $row) { ?>
-            <section class="container">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="<?= $row["gambar"];?>" >
-                    </div>
-                    <h4><?= $row["nama"];?></h4>
-                    <h4><?= $row["kelas"];?> </h4>
-                    <p><?= $row["kata"]; ?> </p>
-                </div>
-            </section>
-            
-            
-        <?php }; ?>  
-    
-    <p>hehe</p>
+.card p {
+    padding: 10px;
+    word-wrap: break-word;
+    text-align: center;
+}
+@keyframes rotate{
+    100%{
+        background-position: 15% 50%;
+    }
+}
 
-</body>
-</html>
+@media (width >=300px) {
+    .search input {
+        font-size: 8px;
+    }
+.search input[type=text] {
+    width: 200px;
+}
+}
